# public/docs/openapi.yaml
@@ -7,69 +7,6 @@ servers:
   -
     url: 'http://api.pdrrmo.local'
 paths:
-  /v1/registration:
-    post:
-      summary: 'User Sign Up'
-      description: ''
-      parameters:
-        -
-          in: header
-          name: Content-Type
-          description: ''
-          example: application/json
-          schema:
-            type: string
-        -
-          in: header
-          name: Accept
-          description: ''
-          example: application/json
-          schema:
-            type: string
-      responses: {  }
-      tags:
-        - Endpoints
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                firstname:
-                  type: string
-                  description: ''
-                  example: et
-                middlename:
-                  type: string
-                  description: ''
-                  example: quo
-                lastname:
-                  type: string
-                  description: ''
-                  example: voluptatem
-                email:
-                  type: string
-                  description: ''
-                  example: omnis
-                password:
-                  type: string
-                  description: ''
-                  example: eos
-                password_confirmation:
-                  type: string
-                  description: ''
-                  example: ut
-                group_id:
-                  type: integer
-                  description: ''
-                  example: 3
-              required:
-                - firstname
-                - lastname
-                - email
-                - password
-      security: []
   /v1/auth/login:
     post:
       summary: "Login user\n\nLogin using email and password"
@@ -102,11 +39,11 @@ paths:
                 email:
                   type: string
                   description: ''
-                  example: laudantium
+                  example: labore
                 password:
                   type: string
                   description: ''
-                  example: recusandae
+                  example: impedit
               required:
                 - email
                 - password
@@ -140,12 +77,145 @@ paths:
       responses: {  }
       tags:
         - Authentication
+  /v1/registration:
+    post:
+      summary: 'User Sign Up'
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses: {  }
+      tags:
+        - Endpoints
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                firstname:
+                  type: string
+                  description: ''
+                  example: sit
+                middlename:
+                  type: string
+                  description: ''
+                  example: non
+                lastname:
+                  type: string
+                  description: ''
+                  example: animi
+                email:
+                  type: string
+                  description: ''
+                  example: est
+                password:
+                  type: string
+                  description: ''
+                  example: qui
+                password_confirmation:
+                  type: string
+                  description: ''
+                  example: quis
+                group_id:
+                  type: integer
+                  description: ''
+                  example: 11
+              required:
+                - firstname
+                - lastname
+                - email
+                - password
+      security: []
+  '/v1/email/verify/{id}':
+    get:
+      summary: 'Mark the authenticated user’s email address as verified.'
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses: {  }
+      tags:
+        - Endpoints
+      security: []
+    parameters:
+      -
+        in: path
+        name: id
+        description: 'The ID of the verify.'
+        example: eaque
+        required: true
+        schema:
+          type: string
+  '/v1/email/resend/{id}':
+    get:
+      summary: 'Resend the email verification notification.'
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {YOUR_AUTH_KEY}'
+          schema:
+            type: string
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses: {  }
+      tags:
+        - Endpoints
+    parameters:
+      -
+        in: path
+        name: id
+        description: 'The ID of the resend.'
+        example: cupiditate
+        required: true
+        schema:
+          type: string
 tags:
   -
-    name: Endpoints
+    name: Authentication
     description: ''
   -
-    name: Authentication
+    name: Endpoints
     description: ''
 components:
   securitySchemes:
